--- a/angularjs/package.json
+++ b/angularjs/package.json
@@ -19,6 +19,7 @@
     "gulp-uglify": "^1.5.3"
   },
   "dependencies": {
+    "angular": "^1.5.5",
     "bootstrap-sass": "^3.3.6",
     "font-awesome": "^4.6.1",
     "icheck": "^1.0.2",
